<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Search Widget -->
    <item
        android:id="@+id/action_profile"
        android:actionViewClass="android.widget.SearchView"
        android:showAsAction="never"
        android:title="@string/mn_profile"/>

    <!-- Location Found -->
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/mn_settings"/>
    <item
        android:id="@+id/action_terms"
        android:showAsAction="never"
        android:title="@string/mn_terms"/>
    <item
        android:id="@+id/action_login"
        android:showAsAction="never"
        android:title="@string/mn_login"/>
    <item
        android:id="@+id/action_signup"
        android:showAsAction="never"
        android:title="@string/mn_signup"/>

    <!-- Location Found -->
    <item
        android:id="@+id/action_concierge"
        android:icon="@drawable/concierge_icon"
        android:showAsAction="always"/>

</menu>