<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp" >

        <TextView
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/thanks"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/t2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t1"
            android:gravity="center_horizontal"
            android:text="@string/vip_req"
            android:textColor="@color/light_yellow"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/t3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t2"
            android:gravity="center_horizontal"
            android:text="@string/under_review"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/t4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t3"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/req_"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/t5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t4"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/meantime"
            android:textColor="@color/light_yellow"
            android:textSize="15sp" />
    </RelativeLayout>

</RelativeLayout>