<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:background="@drawable/cell"
    android:orientation="vertical"
    android:weightSum="2" >

    <EditText
        android:id="@+id/edt_invite_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/invite_first_name"
        android:shadowColor="@color/light_yellow"
        android:textColor="@color/light_yellow" />

    <EditText
        android:id="@+id/edt_invite_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/invite_last_name"
        android:shadowColor="@color/light_yellow"
        android:textColor="@color/light_yellow" />

    <EditText
        android:id="@+id/edt_invite_e_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/invite_email"
        android:shadowColor="@color/light_yellow"
        android:textColor="@color/light_yellow" />

</LinearLayout>