<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollmain"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/relativeheader"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:background="@color/white" >

                <ImageView
                    android:id="@+id/imgprofile"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/user"
                    android:contentDescription="@string/iv_desc" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/imgprofile"
                    android:background="@color/light" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/imgprofile"
                    android:text="@string/uploadphoto"
                    android:textColor="@color/light"
                    android:textSize="20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/light" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeannual"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relativeheader"
                android:background="@color/light_white" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:text="@string/annualincome"
                    android:textColor="@color/light"
                    android:textSize="20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/light" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeincome"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/relativeannual"
                android:background="@color/white" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/income1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="70dp"
                        android:text="@string/income2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="170dp"
                        android:text="@string/income3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="270dp"
                        android:text="@string/income4" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp" >

                        <View
                            android:layout_width="300dp"
                            android:layout_height="10dp"
                            android:layout_centerVertical="true"
                            android:background="@drawable/line" />

                        <ImageView
                            android:id="@+id/img1"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerVertical="true"
                            android:background="@drawable/circle_notselected" />

                        <ImageView
                            android:id="@+id/img2"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="90dp"
                            android:background="@drawable/circle_notselected" />

                        <ImageView
                            android:id="@+id/img3"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="180dp"
                            android:background="@drawable/circle_notselected" />

                        <ImageView
                            android:id="@+id/img4"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="270dp"
                            android:background="@drawable/circle_notselected" />
                    </RelativeLayout>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/light" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativemusicpref"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/relativeincome"
                android:background="@color/light_white" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:text="@string/musicpref"
                    android:textColor="@color/light"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativemusic"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/relativemusicpref"
                android:background="@color/white" >

                <View
                    android:id="@+id/vv"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/light" />

                <co.inlist.util.HorizontalListView
                    android:id="@+id/listview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/vvv"
                    android:layout_below="@+id/vv" >
                </co.inlist.util.HorizontalListView>

                <View
                    android:id="@+id/vvv"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/light" />
            </RelativeLayout>

            <EditText
                android:id="@+id/editInviteCode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/relativemusic"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/invitecode"
                android:singleLine="true"
                android:textColor="@color/light"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editOccupation"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/editInviteCode"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/occupation"
                android:singleLine="true"
                android:textColor="@color/light"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editMostFrequentedClubs"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/editOccupation"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/mfc"
                android:singleLine="true"
                android:textColor="@color/light"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editOtherClub"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/editMostFrequentedClubs"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/ocm"
                android:singleLine="true"
                android:textColor="@color/light"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_below="@+id/editOtherClub" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>